[package]
name = "hpotter"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde_norway = "0.9"
bollard ="0.20"
anyhow = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
testcontainers = "0.27"
test-helpers = { path = "test-helpers" }

